--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="a worthy chicken shop" />
+    <meta property="og:title" content="chethan chicken" />
+    <meta property="og:description" content="a worthy chicken shop" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="c://....." />
+    <meta property="og:url" content="https://chethan-chicken.com" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chethan Chicken!!!.org</title>
@@ -20,7 +26,6 @@
         <span class="icon-container icon-container--gold"
           ><img class="icon" src="images/hen.svg" alt="" />
         </span>
-        <p class="nav__page__name">Chethan Chicken</p>
         <svg
           class="icon icon-white nav__toggler"
           xmlns="http://www.w3.org/2000/svg"
