--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta property="og:title" content="chethan chicken" />
     <meta property="og:description" content="a worthy chicken shop" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="c://....." />
+    <meta
+      property="og:image"
+      content="C:\Users\siddu\Downloads\chickenRoast.jpg"
+    />
     <meta property="og:url" content="https://chethan-chicken.com" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
